# code-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bits.rs  lib.rs
src/coding/: bch.rs  bmcf.rs  cyclic.rs  galois.rs  golay.rs  hamming.rs  reed_solomon.rs  trellis.rs
