[package]
name = "code-rs"
version = "1.0.0"
authors = ["Mick Koch <mick@kochm.co>"]
edition = "2021"
description = "Implementation of multiple coding schemes"
repository = "https://github.com/vihu/code-rs"
readme = "README.md"

[dependencies]
binfield_matrix = "0.2.0"
cai_cyclic = "0.1.2"
cai_golay = "0.1.1"
collect_slice = "1.2.0"
num-traits = "0.2.0"
